src/objects/APTS_TriangleInvoiceOrders__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Stock_Partner__c</fullName>
        <label>Stock Partner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLocationSapId__c</fullName>
        <label>AccountLocationSapId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchId__c</fullName>
        <label>BatchId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillTo__c</fullName>
        <label>BillTo</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart_Id__c</fullName>
        <label>Cart Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HasError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Remarks__c</fullName>
        <label>Invoice Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderReference__c</fullName>
        <label>OrderReference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Name__c</fullName>
        <label>Order Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Reason__c</fullName>
        <label>Order Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Sub_Type__c</fullName>
        <label>Order Sub Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <label>Payer</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Date__c</fullName>
        <label>Pricing Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <label>Processing Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductId__c</fullName>
        <label>ProductId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Delivery_Date__c</fullName>
        <label>Requested Delivery Date</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_ID__c</fullName>
        <label>SAP Customer ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_OrderType__c</fullName>
        <label>SAP_OrderType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SellingUom__c</fullName>
        <label>SellingUom</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SoldTo__c</fullName>
        <label>SoldTo</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UploadedByUserId__c</fullName>
        <label>UploadedByUserId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Triangle Invoice Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>BatchId__c</columns>
        <columns>BillTo__c</columns>
        <columns>Cart_Id__c</columns>
        <columns>Order__c</columns>
        <columns>ErrorMessage__c</columns>
        <columns>HasError__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Order_Name__c</columns>
        <columns>OrderReference__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>APTS_TriangleInvoice__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Triangle Invoice Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>